--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <title>Dobloeb</title>
 </head>
 <body>
-    <div class="halyal">
+    <div id="halyal">
         <h1 class="title"> ABROR SHOP</h1>
         <h1 class="hello">
             Саламалекум братья, здесь можно приобрести халяль свинину по доступной цене. Аброр одобряет!
         </h1>
         
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fuposter.ru%2Fuploads%2Fimages%2F00%2F00%2F01%2F2015%2F07%2F23%2F3b7426.jpg&f=1&nofb=1&ipt=838f9e9f89099ba771d147ab04c13ea395e92b522a59422af7550941650de8ae" alt="">
-        <button class="buy">
+        <button id="buy">
             Купить
         </button>
     </div>
+    <div id="forma">
         <form id="form">
             <input type="text" placeholder="Имя" id="username">
             <input type="text" placeholder="Email" id="email">
             <input type="text" placeholder="Телефон" id="phone">
             <div id="error"></div>
-            <button type="button" id="order">Оформить</button>
+            <button type="submit" id="order">Отправить</button>
         </form> 
+    </div>
     <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
     <script>
         let tg= window.Telegram.WebApp;
@@ -32,8 +34,8 @@
         tg.expand();
 
         buy.addEventListener('click', () => {
-            document.getElementById('halyal').style.display = 'none';
-            document.getElementById('form').style.display = 'block';
+            document.getElementById('halyal').style.opacity = '0';
+            document.getElementById('form').style.opacity = '100';
             document.getElementById('username').value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name;
         })
         order.addEventListener('click', () => {
@@ -69,24 +71,26 @@
             background: var(--tg-theme-bg-color)
             
         }
-        .halyal {
+        #halyal {
+            position: absolute;
+            opacity: 100;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
         }
-        .halyal .title {
+        #halyal .title {
             margin: 10px;
             font-size: 64px;
             font-weight: 200px;
             color: orangered;
         }
-        .halyal .hello {
+        #halyal .hello {
             max-width: 50%;
             height: auto;
             margin: 0 10%;
         }
-        .halyal button {
+        #halyal button {
             margin-top: 50px;
             padding: 20px;
             border-radius: 10px;
@@ -96,16 +100,36 @@
             cursor: pointer;
             transition: all ease 500ms;
         }
-        .halyal button:hover {
+        #halyal button:hover {
             background-color: darkgreen;
         }
-        .halyal img {
+        #halyal img {
             max-width: 100%;
             height: auto;
         }
-        .form {
-            display: none;
+        #form {
+            opacity: 0;
+            display: flex; 
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            gap: 10px;
             text-align: center;
+        }
+        form#form input {
+            height: 30px;
+        }
+        form#form #order {
+            padding: 20px;
+            border-radius: 10px;
+            border: none;
+            background-color: green;
+            color: white;
+            cursor: pointer;
+            transition: all ease 500ms;
+        }
+        #order:hover {
+            background-color: darkgreen
         }
     </style>
 </body>
