--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 return;
             }
             let data = {
-                username : name,
+                name : name,
                 email : email,
                 phone : phone
             }
